<?xml version="1.0"?>
<package format="3">
  <name>cam_node</name>
  <version>0.0.0</version>
  <description>A ROS2 package that publishes camera images using OpenCV and cv_bridge</description>
  <maintainer email="anjp3030@naver.com">Siheon</maintainer>
  <license>Apache License 2.0</license>

  <!-- 빌드 도구 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 실행 의존성 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
